🚰 feat(kitchen-sink): add HTTP Methods API
